Bugfix/E1-393 Added css changes to fix alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/tiles-slider.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/tiles-slider.scss
@@ -239,11 +239,11 @@
                 height: 500px;
                 border: 0;
                 @media (min-width: 992px) {
-                    height: 720px;
+                  height: 720px;
                 }
                 iframe {
-                    width: 100%;
-                    height: 100%;
+                  width: 100%;
+                  height: 100%;
                 }
               }
             }
@@ -593,8 +593,6 @@
 
 //Insurance cards
 .tileBoxMobCarWrap {
-  
-  
   .tile-box-tile {
     background: $white;
     border-radius: toRem(8);
@@ -631,20 +629,6 @@
 
       @include respond-to-min($tablet) {
         padding-bottom: toRem(24);
-      }
-
-      h2 {
-        color: $almost-black;
-        font-size: $font18;
-        line-height: toRem(24);
-        margin: 0;
-        margin-bottom: toRem(8);
-
-        @include respond-to-min($tablet) {
-          font-size: $font28;
-          line-height: toRem(35);
-          margin-bottom: toRem(16);
-        }
       }
 
       p {
